<resources>
    <string name="app_name">Employee</string>
    <string name="button_addEmployee">Add Employee</string>
    <string name="hint_name">Name</string>
    <string name="hint_bio">Bio </string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="menu_addEmployee">Add</string>
    <string name="menu_cancelEmployee">Cancel</string>
    <string name="enter_employee_title"> Please enter a Employee Name </string>
    <string name="save_employee"> Save Employee </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_employee_image">Select employee image</string>
    <string name="change_employee_image">Change image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteEmployee">Delete</string>
    <string name="title_activity_employee_maps">Map of All Locations of Employee </string>
    <string name="menu_saveEmployee">Save</string>
    <string name="menu_logout">Logout</string>
    <string name="open_to_work">Open to Work</string>
    <string name="not_available">Not Available</string>
</resources>